--- a/stylesheets/main.sass
+++ b/stylesheets/main.sass
@@ -326,18 +326,17 @@ footer
   max-width: 50em
 
 .post-type
-  background-color: wheat
-  padding: 0.6em
-  padding-top: 0.1em
-  position: absolute
+  //position: absolute
   margin-left: 1rem
   margin-right: 1rem
-  top: 9.3em
-  height: 2em
-  p
+  //top: 9.3em
+  //height: 2em
+  span
     font-size: 1em
     line-height: auto
     margin-bottom: 0
+    background-color: wheat
+    padding: 0.6em
 
 .post
   border-bottom: 1px solid $black
